DK-1: add installation scripts for programming languages and update package.conf
- added scripts to install c/c++, python, java, node.js, mysql, and mongodb
- updated package.conf with latest configurations
- updated ubuntu-util for quieter installs
- commented out scripts for installing gnome-related components
- commented out scripts for installing desktop-related components

--- a/packages.conf
+++ b/packages.conf
@@ -14,20 +14,27 @@ SYSTEM_UTILS=(
 
 # Development tools
 DEV_TOOLS=(
-  yazi
+  # yazi # TODO: special installation
   bat
+  zoxide
+  eza
   zsh
   neovim
+  tree
   # starship
   tmux
   # ghostty
   git
+  # docker # TODO: special installation
   # asdf-vm
 )
 
 # System maintenance
 MAINTENANCE=(
   gnome-disk-utility
+  gnome-shell-extesion
+  gparted
+  dconf-editor
 )
 
 # Desktop environment
@@ -39,9 +46,14 @@ DESKTOP=(
 # Media packages
 MEDIA=(
   vlc
+  stremio
+  chrome
+  brave
+  edge
 )
 
 # Fonts
+# TODO: special installation
 FONTS=(
   noto-fonts
   noto-fonts-emoji
@@ -49,6 +61,8 @@ FONTS=(
 
 # Services to enable
 SERVICES=(
+  mysql.service
+  # mongod.service
   # gdm.service
   # NetworkManager.service
 )
