feat(DK-3): add development tools installation and configuration
- added scripts for zsh, neovim, tmux, zoxide, and eza
- included associated dot config files

--- a/packages.conf
+++ b/packages.conf
@@ -14,18 +14,15 @@ SYSTEM_UTILS=(
 
 # Development tools
 DEV_TOOLS=(
-  # yazi # TODO: special installation
-  bat
-  zoxide
-  eza
-  zsh
-  neovim
-  tree
-  # starship
-  tmux
-  # ghostty
   git
-  # docker # TODO: special installation
+  bat
+  tree
+  zsh
+  tmux
+  neovim
+  # starship
+  # ghostty
+  # yazi # TODO: special installation
   # asdf-vm
 )
 
@@ -62,7 +59,7 @@ FONTS=(
 # Services to enable
 SERVICES=(
   mysql.service
-  # mongod.service
+  mongod.service
   # gdm.service
   # NetworkManager.service
 )
